# airbnb-reservations-scraper

./: .env.example  .gitignore  Cargo.toml  README.md  Taskfile.yml
.cargo/: config.toml
src/: main.rs
src/config/: globals.rs
src/helpers/: engine.rs  excel.rs  mod.rs
src/models/: reservation.rs
