[package]
name = "airbnb-reservations-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
crossterm = "0.27.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
xlsxwriter = "0.6.0"
