[package]
name = "airbnb-reservations-scraper"
version = "0.1.0"
authors = ["Alejandro Latorre <alejandro.latorre@trust-ai.dev>"]
edition = "2021"

[dependencies]
aws-config = { version = "1.3.0", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2.0", features = [
    "hardcoded-credentials",
] }
aws-sdk-ssm = "1.25.0"
calamine = "0.24.0"
chrono = "0.4.38"
crossterm = "0.27.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
polars = { version = "0.39.2", features = ["json", "lazy"] }
regex = "1.10.4"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
xlsxwriter = "0.6.0"
